--- a/source/manifest.json
+++ b/source/manifest.json
@@ -1,9 +1,9 @@
 {
 	"name" : "Slider With Labels",
 	"author" : "Dobility",
-	"version": "1.12",
+	"version": "1.21",
 	"supportedFieldTypes": ["integer", "decimal"],
-	"externalCss": [ "jquery-ui-slider-pips-min.css", "jquery-ui.min.css" ],
+	"externalCss": [ "jquery-ui-slider-pips-min.css", "jquery-ui.min.css", "jquery.ui.touch-punch.min.js" ],
    	"externalJs": [ "jquery-3.4.1.min.js","jquery-ui.min.js","jquery-ui-slider-pips-min.js"],
 	"hideDefaultRequiredMessage": false,
 	"hideDefaultConstraintMessage": false
